--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<div class="location-container">
 				<div>
 					<br><br>
-					<h2-v>02      Where are they located in?</h2-v>
+					<h2-v>02      Where are they located in the U.S.?</h2-v>
 					<h4> Hover on the name of origin to see detailed distribution </h4>
 					<br>
 					<div id="observablehq-2a621b2f"></div>
