--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			</div>
 		</section>
 
-		<!-- Population history -->
+		<!-- Population history 
 		<section id="pophistory">
 			<div class="pophistory-container">
 				<div>
@@ -128,7 +128,7 @@
 					<br>
 				</div>
 			</div>
-		</section>
+		</section>-->
 		
 
         <!-- History 
@@ -144,6 +144,20 @@
 				</div>
 			</div>
         </section> -->
+
+        <!-- Conclusion -->
+		<section id="final">
+			<div class="final-container">
+				<div>
+					<h2-v>Finally...</h2-v>
+					<img src="img/finally.png" alt="" id="vizforfinal"> 
+					<h4> “No group can be generalized. We are not arguing that Asian people are the only minority, but this group has lacked close look for a long time” </h4>
+					<br>
+					<h4> - that’s why we created this website to help you know more about this gourp. We hope you enjoy reading this site :) </h4>
+					<br>
+				</div>
+			</div>
+		</section>
 
 		<!-- Footer -->
 			<footer class = "footer">
