--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@
 					<br>-->
 					<br>
 					<h2-v>03      What's their income level? </h2-v>
-					<img src="img/income.png" alt="" id="vizforincome"> 
+					<div class = "vizforincome">
+						<img src="img/income.png" alt="" id="vizforincome"> 
+					</div>
 
-					<p> Most U.S. Asian origin groups have household incomes that call below those of Asian Americans overall. Income inequality is rising more rapidly among Asian Americans than other racial or ethnic groups, reflecting wide disparities in income among Asian origin groups. </p>
+					<p> Most U.S. Asian origin groups have household incomes that call below those of Asian Americans overall.  Income inequality is rising more rapidly among Asian Americans than other racial or ethnic groups, reflecting wide disparities in income among Asian origin groups. </p>
 					
 				</div>
 			</div>
