--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		    </div>
 		</section>
 
-		<!-- Hero section -->
+		<!-- Headline/Introction  -->
 		<section id="hero">
 			<div class="hero container">
 				<div>
@@ -136,7 +136,7 @@
 						const inspect = Inspector.into("#observablehq-b85c9977");
 						(new Runtime).module(define, name => (name === "viewof keyframe") && inspect());
 						</script>
-						
+
 						<div id="observablehq-058aceeb"></div>
 						<script type="module">
 						import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
