--- a/index.html
+++ b/index.html
@@ -50,15 +50,18 @@
 					<h2-v>01      Who are they?</h2-v>
 					<h4> Do you know each May is the Asian Pacific Heritage Month?</h4>
 					<h4>We often heard of Asian American and Asian people – but who are they?</h4>
-					<!--<h4>Here is a definition of Asian American from Wikipedia.</h4>-->
+					<div id = "treemap">
+						<div class='tableauPlaceholder' id='viz1589084938337' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tr&#47;treemap_15890846904510&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='treemap_15890846904510&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tr&#47;treemap_15890846904510&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1589084938337');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='1088px';vizElement.style.maxWidth='1188px';vizElement.style.width='100%';vizElement.style.minHeight='614px';vizElement.style.maxHeight='647px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='1088px';vizElement.style.maxWidth='1188px';vizElement.style.width='100%';vizElement.style.minHeight='614px';vizElement.style.maxHeight='647px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+					</div>
 
-					<div id="observablehq-174830da"></div>
+
+					<!--<div id="observablehq-174830da"></div>
 					<script type="module">
 					import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
 					import define from "https://api.observablehq.com/@yanksc/asian-american-zoomable-sunburst.js?v=3";
 					const inspect = Inspector.into("#observablehq-174830da");
 					(new Runtime).module(define, name => (name === "chart") && inspect());
-					</script>
+					</script> -->
 					
 					<!-- <img src="img/who.png" alt="" id="vizforwho"> 
 					<div id="outer-circle"> </div>
@@ -115,6 +118,14 @@
 					<div class = "vizforincome">
 						<img src="img/income.png" alt="" id="vizforincome"> 
 					</div>
+
+					<!--
+					<div id = "incomeinequality">
+						<iframe title="Ratio of income at the 90th percentile to income at the 10th percentile, from 1970 to 2016" aria-label="Interactive line chart" id="datawrapper-chart-yklm6" src="https://datawrapper.dwcdn.net/yklm6/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
+
+						<script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();</script>
+					</div> -->
+
 
 					<p> Most U.S. Asian origin groups have household incomes that call below those of Asian Americans overall.  Income inequality is rising more rapidly among Asian Americans than other racial or ethnic groups, reflecting wide disparities in income among Asian origin groups. </p>
 					
