fixed the timeline data

--- a/index.html
+++ b/index.html
@@ -90,8 +90,6 @@
 		</section>
 
 
-
-
 		<!-- Demographics -->
 		<section id="location">
 			<div class="location-container">
@@ -159,7 +157,7 @@
 							<script src="https://public.flourish.studio/resources/embed.js"></script>
 						</div>
 						<div id="timeline" style="background: #FFF9EE;"></div>
-						<script type="text/javascript" src="./demo.js"></script>
+						<script type="text/javascript" src="./historical_timeline.js"></script>
 			</div>
 		</section>	
 		
