--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 		<section id="income" class="container">
 			
 			<h2-v>What's their income level? </h2-v>
-			<div class='tableauPlaceholder' id='viz1589634731536' style='position: relative'>
+			<!--<div class='tableauPlaceholder' id='viz1589634731536' style='position: relative'>
 				<noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pe&#47;PerCapitaIncome_15896347065390&#47;PerCapitaIncome&#47;1_rss.png' style='border: none' /></a></noscript>
 				<object class='tableauViz'  style='display:none;'>
 					<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
@@ -346,7 +346,7 @@
 				if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1100px';vizElement.style.height='600px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1100px';vizElement.style.height='600px';} else { vizElement.style.width='100%';vizElement.style.height='700px';}					var scriptElement = document.createElement('script');                    
 				scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 				vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-			</script>
+			</script>-->
 			<img src="img/income-inequality.png" alt="" id="vizforincome"> 
 
 			<!-- <div id = "vizforincome">
