--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 				scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 				vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 			</script>-->
-			<img src="img/incomeinequality.png" alt="" id="vizforincome"> 
+			<img src="img/income-inequality.png" alt="" id="vizforincome"> 
 
 			<!-- <div id = "vizforincome">
 				<div class='tableauPlaceholder' id='viz1589636733220' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pe&#47;PerCapitaIncome_15896347065390&#47;PerCapitaIncome&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='PerCapitaIncome_15896347065390&#47;PerCapitaIncome' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pe&#47;PerCapitaIncome_15896347065390&#47;PerCapitaIncome&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1589636733220');                    var vizElement = divElement.getElementsByTagName('object')[0];                    
